<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.credentials.register.UserRegisterActivity"
    android:padding="@dimen/page_padding"
    android:background="@drawable/credentials_background">
    <LinearLayout
        android:id="@+id/llPageHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/page_padding">
        <ImageView
            android:src="@drawable/fateclogo"
            android:layout_width="@dimen/img_size_100"
            android:layout_height="@dimen/img_size_100"/>
    </LinearLayout>
    <TextView
        android:layout_marginTop="90dp"
        android:id="@+id/txtPageTitle"
        android:layout_below="@id/llPageHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/page_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/fs_400"
        />
    <LinearLayout
        android:layout_below="@id/txtPageTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/margin_200"
        android:layout_marginTop="@dimen/margin_200">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_email"
            android:textColor="@color/white"
            android:textSize="@dimen/fs_100"
            android:layout_marginBottom="@dimen/field_label_mb_100"
            />
        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/edit_100"
            android:padding="@dimen/edt_padding_100"
            android:layout_marginBottom="@dimen/margin_100"
            android:inputType="textEmailAddress"
            android:hint="@string/lbl_email_hint"
            android:textColorHint="@color/gray_100"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_name"
            android:textColor="@color/white"
            android:textSize="@dimen/fs_100"
            android:layout_marginBottom="@dimen/field_label_mb_100"
            />
        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/edit_100"
            android:padding="@dimen/edt_padding_100"
            android:layout_marginBottom="@dimen/margin_100"
            android:inputType="textEmailAddress"
            android:hint="@string/lbl_name_hint"
            android:textColorHint="@color/gray_100"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_pass"
            android:textColor="@color/white"
            android:textSize="@dimen/fs_100"
            android:layout_marginBottom="@dimen/field_label_mb_100"
            />
        <EditText
            android:id="@+id/edtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/edit_100"
            android:padding="@dimen/edt_padding_100"
            android:layout_marginBottom="@dimen/margin_100"
            android:inputType="textPassword"
            android:hint="@string/lbl_pass_hint"
            android:textColorHint="@color/gray_100"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_pass_confirm"
            android:textColor="@color/white"
            android:textSize="@dimen/fs_100"
            android:layout_marginBottom="@dimen/field_label_mb_100"
            />
        <EditText
            android:id="@+id/edtPassConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/edit_100"
            android:padding="@dimen/edt_padding_100"
            android:layout_marginBottom="@dimen/margin_100"
            android:inputType="textPassword"
            android:hint="@string/lbl_pass_hint_confirm"
            android:textColorHint="@color/gray_100"
            android:textColor="@color/black"
            />
        <Button
            android:id="@+id/btnRegister"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_register"
            android:backgroundTint="@color/background_200"
            android:textColor="@color/white"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_marginBottom="@dimen/margin_100">
        <Button
            android:id="@+id/btnChangeCredentialsMethod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_go_to_login"
            android:background="@drawable/clickable_textview"
            android:textColor="@color/white"
            />
    </LinearLayout>
</RelativeLayout>